--- a/mobile/src/main/res/layout/activity_life_login_web_page.xml
+++ b/mobile/src/main/res/layout/activity_life_login_web_page.xml
@@ -4,8 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<WebView xmlns:android="http://schemas.android.com/apk/res/android"
+<WebView
     android:id="@+id/browser_demo"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" />
 </LinearLayout>
