--- a/mobile/src/main/res/layout/activity_landing.xml
+++ b/mobile/src/main/res/layout/activity_landing.xml
@@ -1,8 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/home_alone"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".LandingActivity">
     <!--<ImageView-->
@@ -18,12 +19,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Welcome to Runanas!"
+        android:background="@android:color/transparent"
+        android:textColor="@color/white"
         android:id="@+id/leaveLandingPage"
-        android:layout_marginBottom="39dp"
-        android:layout_alignParentBottom="true"
+        android:layout_marginTop="25dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
-
-
-
-</FrameLayout>
+</RelativeLayout>
