--- a/mobile/src/main/res/layout/activity_life_login_web_page.xml
+++ b/mobile/src/main/res/layout/activity_life_login_web_page.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/home_match"
     >
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="YEAH!"
-        android:id="@+id/yeah"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        android:text="Sync with Lifelog!"
+        android:id="@+id/lifeLog_button"
+        android:background="@color/app_green"
+        android:textColor="@color/white"
+        android:layout_marginTop="25dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+    />
+</RelativeLayout>
