--- a/mobile/src/main/res/layout/activity_login.xml
+++ b/mobile/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/home_match"
     tools:context="com.hh.hackathon.runanashackathon.LoginActivity">
 
     <!-- Login progress -->
@@ -30,8 +31,10 @@
                 <Button android:id="@+id/plus_disconnect_button"
                     style="?android:textAppearanceSmall" android:layout_width="match_parent"
                     android:layout_height="match_parent" android:layout_weight="1"
-                    android:text="@string/plus_disconnect" />
-
+                    android:text="@string/plus_disconnect"
+                    android:background="@color/app_green"
+                    android:textColor="@color/white"
+                    ></Button>
             </LinearLayout>
 
             <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
@@ -40,18 +43,22 @@
                 <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress" android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/white"/>
 
                 <EditText android:id="@+id/password" android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:hint="@string/prompt_password"
                     android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified" android:inputType="textPassword"
-                    android:maxLines="1" android:singleLine="true" />
+                    android:maxLines="1" android:singleLine="true"
+                    android:textColor="@color/white"/>
 
                 <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                     android:layout_width="match_parent" android:layout_height="wrap_content"
                     android:layout_marginTop="16dp" android:text="@string/action_sign_in"
+                    android:background="@color/app_green"
+                    android:textColor="@color/white"
                     android:textStyle="bold" />
 
             </LinearLayout>
