--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.hh.hackathon.runanashackathon.MainActivity">
+    tools:context="com.hh.hackathon.runanashackathon.MainActivity"
+    android:background="@color/ripple_material_light"
+    >
 
 </RelativeLayout>
