--- a/mobile/src/main/res/layout/activity_match.xml
+++ b/mobile/src/main/res/layout/activity_match.xml
@@ -7,9 +7,20 @@
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:contentDescription="Jon Frost"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/avatar" />
+
     <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
+        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="@color/app_green"
         android:textStyle="bold" android:textSize="50sp" android:gravity="center"
+        
+        android:layout_marginTop="100dp"
         android:text="@string/Match" />
 
     <!-- This FrameLayout insets its children based on system windows using
@@ -25,7 +36,7 @@
 
             <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
                 android:layout_width="0dp" android:layout_height="wrap_content"
-                android:layout_weight="1" android:text="@string/Match" />
+                android:layout_weight="1" android:text="@string/dummy_button" />
 
         </LinearLayout>
     </FrameLayout>
