--- a/mobile/src/main/res/layout/activity_landing.xml
+++ b/mobile/src/main/res/layout/activity_landing.xml
@@ -26,4 +26,15 @@
         android:layout_marginTop="25dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:adjustViewBounds="true"
+        android:contentDescription="logo"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="-25dp"
+        android:paddingBottom="190dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/logo" />
 </RelativeLayout>
