--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -5,10 +5,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.hh.hackathon.runanashackathon.MainActivity"
-    android:background="@color/ripple_material_light"
+    android:background="@color/white"
     >
 
     <ListView
+        android:background="@color/app_green"
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
