--- a/mobile/src/main/res/layout/match_item.xml
+++ b/mobile/src/main/res/layout/match_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"  android:layout_height="?android:attr/listPreferredItemHeight">
+    android:layout_width="match_parent"  android:layout_height="?android:attr/listPreferredItemHeight"
+    android:padding="6dip">
 
 
     <ImageView
@@ -14,7 +15,7 @@
         android:src="@drawable/ingritte_60_60" />
 
     <TextView
-        android:id="@+id/distance"
+        android:id="@+id/list_item_distance"
         android:layout_width="fill_parent"
         android:layout_height="26dip"
         android:layout_alignParentBottom="true"
@@ -22,14 +23,14 @@
         android:layout_toRightOf="@id/icon"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:text="Description"
+        android:text="Distance"
         android:textSize="12sp" />
 
     <TextView
         android:id="@+id/list_item_username"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/distance"
+        android:layout_above="@id/list_item_distance"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
